update filter logic, fix job, update specification and api test
